packages/webassemblyjs/test/fixtures/type-errors/call-wrong-params/module.wast
(module 
  (func (param i32))
  (func
    (call 0)
  )
)
